--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
     "codespaces": {
       "openFiles": [
         "README.md",
-        "Welcome.py"
+        "Cats_and_Dogs.py"
       ]
     },
     "vscode": {
